# patchstorm

./: .fogg-version  .gitignore  CLAUDE.md  Dockerfile  Makefile  Pipfile  README.md  SECURITY.md  check_patchstorm_status.sh  demo.tape  docker-compose.yml  env.sample  pyproject.toml  repository_info.yml  run_agent.py  shortcut.sh  test_run_agent.py
.github/workflows/: cc.yaml  pytest.yaml  test.yaml
agent_images/: build_img.sh
agent_images/claude_code/: Dockerfile  init-firewall.sh  settings.json
agent_images/codex/: Dockerfile
mcp/: Dockerfile  Makefile  Pipfile  docker-compose.yml  mcp_server.py
patchstorm/: config.py  exceptions.py  github_utils.py  run_agent_config.py  task_definition.py
patchstorm/tests/: test_run_agent_config.py  test_task_definition.py
scripts/: get_all_actions.sh
tasks/: celery.py  cmdline_utils.py  config.py  github_tasks.py
tasks/tests/: test_github_tasks.py
