[project]
name = "patchstorm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "flower>=2.0.1",
    "jsonschema>=4.25.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pygithub>=2.8.1",
    "pytest>=8.4.2",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "xenon>=0.9.3",
]
